    - Fix crash when switching entities while LTN Combinator is opening in map view and latency
      to the game server exists.
  Changes:
    - Will not remove signals when converting to depot by default.  Hold Shift when clicking depot
      checkbox to remove Requester/Provider related signals
    - New combinators from blueprints, or copy/paste will follow rules in Mod Settings
    - Replacing standard constant combinators will not auto-disable anything.
    - Rotating combinators by robot will not loose thresholds or disable services
    - Thresholds and service state will be restored on undo up to 1 hour
    - Thresholds and service state will be restored when reviving a destroyed combinator ghost
  Features:
    - Added reset buttons for LTN signals that will clear the signal to use the LTN default (#12)
    - Now able to store a positive signal by holding SHIFT when clicking the confirm button.
    - Will add an alert when placing new combinators that have something auto-disabled based on 
      Mod-settings.
    - Per-user setting to display the network config panel as the default view when opening the
      combinator
---------------------------------------------------------------------------------------------------
Version: 2.0.6
Date: 2023-05-15
  Bugfixes:
    - Added missing locale string help for /ltnc-unset-requester
    - Attempt to avoid an elusive crash bug with some additional validation.
    - Re-fix crash if Network Description Icon is from a mod you removed.  (#5)
  Changes:
    - Added a debug output file in script-out.  There have been a few reports of a crash in
      multi-player that I haven't been able to reproduce, or track down the source.  If these
      conditions present again it will dump some data from this mod to a file and print a message
      on the screen instead of crashing.  If you run into this, please provide the file it creates